--- a/data/axis.html
+++ b/data/axis.html
@@ -1,6 +1,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<a href="admin.html" class="btn btn--s">&lt;</a>&nbsp;&nbsp;<strong>Konfiguracja osi A</strong>
+<a href="/" class="btn btn--s">&lt;</a>&nbsp;&nbsp;<strong>Konfiguracja osi A</strong>
 <hr>
 	Parametry silnika:<br>
 <form action="/axis" method="get">
@@ -33,6 +33,8 @@
         </tr>
     </table>
 </form>
+<hr>
+<a href="stepper" style="width:250px" class="btn btn--m btn--blue" >DEBUG stepper</a>
 
 <script language="javascript" type="text/javascript">
     window.onload = function () {
