--- a/data/arm.html
+++ b/data/arm.html
@@ -1,55 +1,52 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<a href="/" class="btn btn--s">&lt;</a>&nbsp;&nbsp;<strong>Konfiguracja osi A</strong>
+<a href="/" class="btn btn--s">&lt;</a>&nbsp;&nbsp;<strong>Konfiguracja osi Y</strong>
 <hr>
-	Parametry silnika:<br>
+	Parametry wiercenia:<br>
 <form action="" method="get">
     <table border="0" cellspacing="0" cellpadding="3" style="width:350px">
         <tr>
-            <td align="right">1&deg; =</td>
+            <td align="right">MIN T wiercenia =</td>
             <td>
-                <input type="number" min="0" max="1000000" step="0.000001" id="xScale" name="xScale" value="" size="4" maxlength="8"> kroków
+                <input type="number" min="0" max="1000000" step="1" id="inMaxTime" name="inMaxTime" value="" size="4" maxlength="8"> ms
             </td>
         </tr>
         <tr>
-            <td align="right">F =</td>
+            <td align="right">MAX T powrotu =</td>
             <td>
-                <input type="number" min="0" max="1000000" step=any id="xFeed" name="xFeed" size="4" maxlength="8"> &deg;/s
+                <input type="number" min="0" max="1000000" step=any id="outMinTime" name="outMinTime" size="4" maxlength="8"> ms
+            </td>
+        </tr>
+				<tr>
+            <td align="right">Powtorzen =</td>
+            <td>
+                <input type="number" min="0" max="1000000" step=any id="repeats" name="repeats" size="4" maxlength="8"> n
+            </td>
+        </tr>
+				<tr>
+            <td align="right">reversed? *</td>
+            <td>
+                <input type="number" min="0" max="1" step=1 id="activeLow" name="activeLow" size="1" maxlength="1"> n
             </td>
         </tr>
 				<tr>
 				  <td colspan="2" class="divider"><hr /></td>
 				</tr>
-				<tr>
-					<td align="right">Przycisk:</td>
-				</tr>
-        <tr>
-					<td align="right">G01 </td>
-					<td>
-							<input type="number" min="-3600" max="3600" step=any id="xAction01" name="xAction01" value="" size="4" maxlength="8"> &deg;
-					</td>
-        </tr>
-				<tr>
-					<td align="right">odstep =</td>
-					<td>
-							<input type="number" min="0" max="1000" step=any id="runButtonDelay" name="runButtonDelay" value="" size="4" maxlength="8"> ms
-					</td>
-				</tr>
         <tr>
             <td colspan="2" align="center">
                 <input type="submit" style="width:150px" class="btn btn--m btn--blue" value="Zapisz">
+								<input id="drillNow" type="button" style="width:120px" class="btn btn--m btn--blue" value="<-" onclick="setValues('/arm?'+ 'drillNow' + '=' + -document.getElementById('repeats').value)">
             </td>
         </tr>
     </table>
 </form>
 <hr>
-<a href="stepper" style="width:250px" class="btn btn--m btn--blue" >DEBUG stepper</a>
-
+* - wymaga restartu
 <script language="javascript" type="text/javascript">
     window.onload = function () {
         load("style.css", "css", function () {
             load("microajax.js", "js", function () {
-                setValues("/axis_values");
+                setValues("/arm_values");
             });
         });
     }
